--- a/index.html
+++ b/index.html
@@ -1,25 +1,48 @@
 <!DOCTYPE html> 
 <html lang="pt-br">
+
 <head>
 	<meta charset="UTF-8">
 	<title>Teste de ChatBox</title>
 </head>
+
 <body>
-	<div id='mainContent' style='min-height:  1920px width: auto; margin: auto;'>
+	<div id='mainContent' 
+	style='min-height:  1920px; 
+	width: auto; 
+	margin: auto;'>
 
 
 		<section id="intro">
-		<div id='topLeftBlock' style="margin-top: 30px; max-width: 500px; float: left; margin-left: 10%;">
+		<div id='topLeftBlock' 
+		style="margin-top: 30px; 
+			max-width: 500px; 
+			float: left; 
+			margin-left: 10%;">
+
 			<h1 style="display: inline;">Teste de Chatbox</h1><h4 style="color: lightgray; display: inline; margin-left: 20px; font-style: italic;">versão 0.01-alpha</h4>
+			
 			<p>Digite abaixo um nome de usuário para utilizar no chat.</p>
+			
 			<input type="text" placeholder="@seunome..." id="usernameInputText" autocomplete="off" maxlength="16" title="Digite um nome de usuário aqui">
+			
 			<button id="usernameInputButton" title="Clique para criar usuário">Criar</button>
+			
 			<p id="usernameDisplay" style="font-style: italic; color: gray; font-size: small;"></p>
 		</div>
+
 		</section>
-		<div id="topRightBlock" style="max-width: 500px; float: right; margin-left:  10%; margin-right: 33%;">
+		
+		<div id="topRightBlock" 
+		style="max-width: 500px; 
+			float: right; 
+			margin-left:  10%; 
+			margin-right: 33%;">
+
 			<div id="chat-messages" style="min-height: 200px; max-height: 800px; margin-top: 30%;">
+			
 			</div>
+			
 			<div id="chat-form" style="margin: 100,50;">
 				<input type="text" name="message" placeholder="Digite uma mensagem..." maxlength="500" autocomplete="off">
 				<button type="submit">Enviar</button>
