--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 		<div id='topLeftBlock' 
 		style="margin-top: 30px; 
 			max-width: 500px; 
-			float: left; 
+			display: inline-flex; 
+			flex-direction: column;
 			margin-left: 10%;">
 
 			<h1 style="display: inline;">Teste de Chatbox</h1><h4 style="color: lightgray; display: inline; margin-left: 20px; font-style: italic;">versão 0.01-alpha</h4>
@@ -35,7 +36,7 @@
 		
 		<div id="topRightBlock" 
 		style="max-width: 500px; 
-			float: right; 
+			display: inline-flex; 
 			margin-left:  10%; 
 			margin-right: 33%;">
 
