--- a/index.html
+++ b/index.html
@@ -6,41 +6,66 @@
 	<title>Teste de ChatBox</title>
 </head>
 
-<body>
+<body style="min-height: 1080px">
+
+	<!--
+	:::: Leia-me antes de análisar o código abaixo. ::::
+
+	Buenas! 
+
+	Como ce pode ver, todo CSS está ainda embutido no html de forma primitiva.
+	A criação de um CSS separado vai acontecer mais adiante, em outra versão.
+
+	Esse branch tem como preocupação aprender minimamente a posicionar coisas na página usando flexbox e fazer com que ao mudar o tamanho da janela, as coisas se mexam de forma organizada.
+
+	O main não utilizava de flexboxes e ainda tinha problemas com o layout.
+	As soluções iniciais estão sendo trabalhadas aqui.
+
+	[!] -> As cores de fundo são apenas para identificar as seções e não farão parte do produto final.
+	-->
+	
 	<div id='mainContent' 
-	style='min-height:  1920px; 
-	width: auto; 
-	margin: auto;'>
+	style='max-height: 1080px;
+	min-height:  max-content; 
+	background-color: lightgray;
+	display: flex;
+	flex-wrap: wrap;'>
 
 
-		<section id="intro">
-		<div id='topLeftBlock' 
-		style="margin-top: 30px; 
-			max-width: 500px; 
-			display: inline-flex; 
+		<section id="intro" 
+			style="display: inherit;
+			max-width: 600px;
+			max-height: 600px;
+			min-width: 33%;
+			margin-top: 30px; 
+			margin-left: 10%;
 			flex-direction: column;
-			margin-left: 10%;">
+			background-color: aliceblue;">
 
-			<h1 style="display: inline;">Teste de Chatbox</h1><h4 style="color: lightgray; display: inline; margin-left: 20px; font-style: italic;">versão 0.01-alpha</h4>
+			<div><h1 style="display: inline;">Teste de Chatbox</h1><h4 style="color: lightgray; display: inline; margin-left: 20px; margin-right: 20px; font-style: italic;">versão 0.01-alpha</h4></div>
 			
 			<p>Digite abaixo um nome de usuário para utilizar no chat.</p>
 			
+			<div style="margin-top: 5%;">
 			<input type="text" placeholder="@seunome..." id="usernameInputText" autocomplete="off" maxlength="16" title="Digite um nome de usuário aqui">
 			
 			<button id="usernameInputButton" title="Clique para criar usuário">Criar</button>
 			
-			<p id="usernameDisplay" style="font-style: italic; color: gray; font-size: small;"></p>
-		</div>
-
+			<p id="usernameDisplay" style="font-family: monospace;font-style: italic; color: gray; font-size: small;"></p>
+			</div>
 		</section>
-		
-		<div id="topRightBlock" 
-		style="max-width: 500px; 
-			display: inline-flex; 
-			margin-left:  10%; 
-			margin-right: 33%;">
 
-			<div id="chat-messages" style="min-height: 200px; max-height: 800px; margin-top: 30%;">
+		<section id="chatStuff" 
+		style="display: inherit;
+			flex-direction: column;
+			flex-basis:  100%;
+			max-width: 600px;
+			max-height: 800px;
+			min-width: 33%;
+			margin-left:  10%; 
+			background-color: palevioletred;">
+
+			<div id="chat-messages" style="min-height: 400px; max-height: 800px; margin-top: 30%; background-color: mediumvioletred;">
 			
 			</div>
 			
@@ -48,7 +73,6 @@
 				<input type="text" name="message" placeholder="Digite uma mensagem..." maxlength="500" autocomplete="off">
 				<button type="submit">Enviar</button>
 		 	</div>
-		</div>
 	</div>
 </body>
 <script type="text/javascript" src="script.js"></script>
