Testing new logic using ES6 classes for users and messages. Not ready yet.

--- a/index.html
+++ b/index.html
@@ -15,24 +15,8 @@
 </head>
 
 <body>
-
-	<!--
-	:::: Leia-me antes de análisar o código abaixo. ::::
-
-	Buenas! 
-
-	Como ce pode ver, todo CSS está ainda embutido no html de forma primitiva.
-	A criação de um CSS separado vai acontecer mais adiante, em outra versão.
-
-	Esse branch tem como preocupação aprender minimamente a posicionar coisas na página usando flexbox e fazer com que ao mudar o tamanho da janela, as coisas se mexam de forma organizada.
-
-	O main não utilizava de flexboxes e ainda tinha problemas com o layout.
-	As soluções iniciais estão sendo trabalhadas aqui.
-
-	[!] -> As cores de fundo são apenas para identificar as seções e não farão parte do produto final.
-	-->
 	
-	<div id='mainContent'>
+	<div id='main-content'>
 
 
 		<section id="intro">
@@ -42,51 +26,51 @@
 				<h2>versão 0.01-alpha</h2>
 			</div>
 			
-			<p>Digite abaixo um <label for="usernameInputText">nome de usuário</label> e uma <label for="usernameInputColor">cor</label> para utilizar no chat.</p>
+			<p>Digite abaixo um <label for="username-input-text">nome de usuário</label> e uma <label for="username-input-color">cor</label> para utilizar no chat.</p>
 			
-			<div id="inputUsernameContainer">
-				<input name="usernameInputText" type="text" placeholder="@seunome..." id="usernameInputText" autocomplete="off" maxlength="16" title="Digite um nome de usuário aqui" style="margin: 5px;">
-				<input name="usernameInputColor" type="color" style="margin: 5px;">
-				<button id="usernameInputButton" title="Clique para criar usuário" style="margin: 5px; width: 48px;">Criar</button>
+			<div id="input-username-container">
+				<input name="username-input-text" type="text" placeholder="@seunome..." id="username-input-text" autocomplete="off" maxlength="16" title="Digite um nome de usuário aqui" style="margin: 5px;">
+				<input id="username-input-color" name="username-input-color" type="color" style="margin: 5px;">
+				<button id="username-input-button" title="Clique para criar usuário" style="margin: 5px; width: 48px;" onclick="criadorDeUser()">Criar</button>
 			</div>
-			<p id="usernameDisplay"></p>
+			<p id="username-display"></p>
 		</section>
 
-		<section id="chatStuff">
+		<section id="chat-stuff">
 
-			<main id="chat-messages">
-				<div class="chatPost yourText">
-					<h3 class="usernameDisplay">@Username01</h3>
-					<p>Ea quod veritatis aspernatur inventore corrupti quia necessitatibus nihil. Maxime minima maiores consectetur hic. Expedita quasi necessitatibus architecto deserunt vel sunt. Doloremque rerum possimus expedita ut. Architecto sunt aperiam neque similique praesentium consequatur repellendus. Voluptatibus nostrum odit debitis aut quo dolor.</p>
+			<main id="chat-log">
+				<div class="chat-post your-text">
+					<h3 class="username-display">@Username01</h3>
+					<p class='chat-message'>Ea quod veritatis aspernatur inventore corrupti quia necessitatibus nihil. Maxime minima maiores consectetur hic. Expedita quasi necessitatibus architecto deserunt vel sunt. Doloremque rerum possimus expedita ut. Architecto sunt aperiam neque similique praesentium consequatur repellendus. Voluptatibus nostrum odit debitis aut quo dolor.</p>
 				</div>
-				<div class="chatPost">
-					<h3 class="usernameDisplay">@Username01</h3>
-					<p>Vitae ratione corporis consequuntur eos provident. Minus placeat qui ut temporibus ipsam earum. Libero cupiditate debitis enim amet expedita dolores aut similique. Modi et dolores ab officiis quia.</p>
+				<div class="chat-post">
+					<h3 class="username-display">@Username01</h3>
+					<p class='chat-message'>Vitae ratione corporis consequuntur eos provident. Minus placeat qui ut temporibus ipsam earum. Libero cupiditate debitis enim amet expedita dolores aut similique. Modi et dolores ab officiis quia.</p>
 				</div>
-				<div class="chatPost">
-					<h3 class="usernameDisplay">@Username01</h3>
-					<p>Perferendis quod aut quod nemo ut animi dolore suscipit. Amet natus possimus ut tenetur facere aut occaecati. Et quibusdam molestiae neque qui. Sequi qui natus exercitationem. Velit nihil adipisci cupiditate maiores sint quibusdam voluptatem illum.</p>
+				<div class="chat-post">
+					<h3 class="username-display">@Username01</h3>
+					<p class='chat-message'>Perferendis quod aut quod nemo ut animi dolore suscipit. Amet natus possimus ut tenetur facere aut occaecati. Et quibusdam molestiae neque qui. Sequi qui natus exercitationem. Velit nihil adipisci cupiditate maiores sint quibusdam voluptatem illum.</p>
 				</div>
-				<div class="chatPost">
-					<h3 class="usernameDisplay">@Username01</h3>
-					<p>Reprehenderit eius et esse quia deserunt ut sequi. Quod sunt alias quasi unde molestiae ut qui porro. Architecto dolorum dignissimos aut optio quia quos rerum pariatur.</p>
+				<div class="chat-post">
+					<h3 class="username-display">@Username01</h3>
+					<p class='chat-message'>Reprehenderit eius et esse quia deserunt ut sequi. Quod sunt alias quasi unde molestiae ut qui porro. Architecto dolorum dignissimos aut optio quia quos rerum pariatur.</p>
 				</div>
-				<div class="chatPost" class="">
-					<h3 class="usernameDisplay">@Username01</h3>
-					<p>Beatae ipsa earum dolore aut. Sed aut esse debitis deleniti vel enim facere. Dolore blanditiis quam nisi quos ut est ipsam et. Alias dolor fugiat et ut. Quae similique dolorem et ea veniam repellendus voluptatem veritatis.</p>
+				<div class="chat-post" class="">
+					<h3 class="username-display">@Username01</h3>
+					<p class='chat-message'>Beatae ipsa earum dolore aut. Sed aut esse debitis deleniti vel enim facere. Dolore blanditiis quam nisi quos ut est ipsam et. Alias dolor fugiat et ut. Quae similique dolorem et ea veniam repellendus voluptatem veritatis.</p>
 				</div>
 			</main>
 			
 			<div id="chat-form">
 				<div style="display: block; margin-bottom: 5px;">
-					<label for="selectUser">Usuário:</label>
-					<select name="selectUser" id="selectUser" style="min-width: 15ch;">
-						<option value=""></option>
+					<label for="select-user">Usuário:</label>
+					<select name="select-user" id="select-user" style="min-width: 15ch;">
+						<option value="teste">teste</option> <!-- CONFIGURAR SELETOR -->
 					</select>
 				</div>
 				<!-- <input id="message-input-field" type="text" name="message" placeholder="Digite uma mensagem..." maxlength="500" autocomplete="off"> -->
 				<textarea id="message-input-field" name="message-input-field" name="message" placeholder="Digite uma mensagem..." maxlength="500" autocomplete="off"></textarea>
-				<button id="send-new-message">Enviar</button>
+				<button id="send-new-message" onclick="getText()">Enviar</button> <!-- ADICIONAR CLICK -->
 		 	</div>
 		 </section>
 	</div>
