Users, messages and selectors are working great now :)

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 			<div id="chat-form">
 				<div style="display: block; margin-bottom: 5px;">
 					<label for="select-user">Usuário:</label>
-					<select name="select-user" id="select-user" style="min-width: 15ch;">
-						<option value="teste">teste</option> <!-- CONFIGURAR SELETOR -->
+					<select name="select-user" id="select-user" style="min-width: 15ch;" disabled>
+						<!-- CONFIGURAR SELETOR -->
 					</select>
 				</div>
 				<!-- <input id="message-input-field" type="text" name="message" placeholder="Digite uma mensagem..." maxlength="500" autocomplete="off"> -->
