feat: mock messages function example

--- a/index.html
+++ b/index.html
@@ -38,28 +38,7 @@
 
 		<section id="chat-stuff">
 
-			<main id="chat-log">
-				<div class="chat-post your-text">
-					<h3 class="username-display">@Username01</h3>
-					<p class='chat-message'>Ea quod veritatis aspernatur inventore corrupti quia necessitatibus nihil. Maxime minima maiores consectetur hic. Expedita quasi necessitatibus architecto deserunt vel sunt. Doloremque rerum possimus expedita ut. Architecto sunt aperiam neque similique praesentium consequatur repellendus. Voluptatibus nostrum odit debitis aut quo dolor.</p>
-				</div>
-				<div class="chat-post">
-					<h3 class="username-display">@Username01</h3>
-					<p class='chat-message'>Vitae ratione corporis consequuntur eos provident. Minus placeat qui ut temporibus ipsam earum. Libero cupiditate debitis enim amet expedita dolores aut similique. Modi et dolores ab officiis quia.</p>
-				</div>
-				<div class="chat-post">
-					<h3 class="username-display">@Username01</h3>
-					<p class='chat-message'>Perferendis quod aut quod nemo ut animi dolore suscipit. Amet natus possimus ut tenetur facere aut occaecati. Et quibusdam molestiae neque qui. Sequi qui natus exercitationem. Velit nihil adipisci cupiditate maiores sint quibusdam voluptatem illum.</p>
-				</div>
-				<div class="chat-post">
-					<h3 class="username-display">@Username01</h3>
-					<p class='chat-message'>Reprehenderit eius et esse quia deserunt ut sequi. Quod sunt alias quasi unde molestiae ut qui porro. Architecto dolorum dignissimos aut optio quia quos rerum pariatur.</p>
-				</div>
-				<div class="chat-post" class="">
-					<h3 class="username-display">@Username01</h3>
-					<p class='chat-message'>Beatae ipsa earum dolore aut. Sed aut esse debitis deleniti vel enim facere. Dolore blanditiis quam nisi quos ut est ipsam et. Alias dolor fugiat et ut. Quae similique dolorem et ea veniam repellendus voluptatem veritatis.</p>
-				</div>
-			</main>
+			<main id="chat-log" />
 			
 			<div id="chat-form">
 				<div style="display: block; margin-bottom: 5px;">
